--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ python = "~3.8,<3.9"
 Scrapy = "^2.7.1"
 
 [tool.poetry.dev-dependencies]
+black = {extras = ["d"], version = "^22.12.0"}
 
 [build-system]
 requires = ["poetry>=0.12"]
